--- a/requirements.txt
+++ b/requirements.txt
@@ -11,3 +11,7 @@ sqlparse==0.5.3
 stripe==11.4.1
 typing_extensions==4.12.2
 urllib3==2.3.0
+django-filter>=23.5
+django-celery-beat>=2.5.0
+redis>=5.0.1
+celery>=5.3.6
